# remote-browser-tool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/remote_browser_tool/: cli.py  config.py  factory.py  models.py
src/remote_browser_tool/admin/: __init__.py  client.py  service.py
src/remote_browser_tool/admin/templates/: executor.html  index.html  layout.html  task_detail.html
src/remote_browser_tool/browser/: base.py  playwright_session.py  vnc.py
src/remote_browser_tool/executor/: instrumentation.py  models.py  portal.py  service.py  task_runner.py
src/remote_browser_tool/llm/: base.py  json_parser.py  local.py  mock.py  openai_client.py
src/remote_browser_tool/memory/: base.py
src/remote_browser_tool/notifications/: base.py
src/remote_browser_tool/orchestrator/: control.py  prompt_builder.py  runner.py
src/remote_browser_tool/user_portal/: base.py  http.py
tests/: test_admin_service.py  test_cli_integration.py  test_config.py  test_executor_service.py  test_json_parser.py  test_local_llm.py  test_memory.py  test_orchestrator.py  test_user_portal.py
